corrected the alignment of menu items

--- a/main_css/style_menu.css
+++ b/main_css/style_menu.css
@@ -14,18 +14,49 @@ body{
     background-image: url(../assets/meu_background.jpg);
     border: 2px solid black;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;  
 }
 
+.objects{
+    height: 70%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center; 
+}
 
 .item{
-    float: left;
+    float: center;
     background-color: blue;
     color: rgb(236, 0, 0);
-    width: 125px;
-    line-height: 125px;
+    height:5rem;
+    width: 270px;
+    line-height: 20px;
     text-align: center;
     margin: 10px;
+}
+
+.objects h2{
+    text-align: center;
+}
+
+.show{
+    display: block;
+}
+
+.button{
+    border: none;
+    outline: none;
+    margin-bottom: 20px;
+    padding: 12px 16px;
+    background-color: aliceblue;
+    cursor: pointer;
+
+}
+
+.button:hover{
+    background-color: violet;
 }
